--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+title: BigMax
+description: A sumo robot project
+logo: https://avatars2.githubusercontent.com/u/12615544?s=460&v=4
+show_downloads: true
+google_analytics: [Your Google Analytics tracking ID]
