--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 title: BigMax
 description: A sumo robot project
 logo: https://avatars2.githubusercontent.com/u/12615544?s=460&v=4
-show_downloads: true
+show_downloads: false
 google_analytics: [Your Google Analytics tracking ID]
