--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,4 @@ title: BigMax
 description: A sumo robot project
 logo: https://avatars2.githubusercontent.com/u/12615544?s=460&v=4
 show_downloads: false
-google_analytics: [Your Google Analytics tracking ID]
+google_analytics: UA-143672565-1
