--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: BigMax
 description: A sumo robot project
-logo: https://avatars2.githubusercontent.com/u/12615544?s=460&v=4
+logo: ./img/BM.jpg
 show_downloads: false
 google_analytics: UA-143672565-1
